Add rudimentary battle